[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stratosfear-rides"
version = "1.0.0"
description = "Stratos-FEAR Rides - Space Tourism Simulation"
authors = [{name = "James Little"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
stratosfear = "stratosfear.__main__:main"
